@@ -1,3 +1,8 @@
+2004-03-23  Scott Dattalo  <scott AT dattalo.com>
+
+	* src/pic/gen.c (genCpl): multi-byte complements were not working.
+	* src/regression/Makefile: Regression test was not running.
+
 2004-03-22 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* src/SDCCast.c (processParms): fixed bug #920866; decorateType() can
